Rename z-index-fixed to z-index-navbar.

--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -8,7 +8,7 @@
     top: 0;
     left: 0;
     right: 0;    
-    z-index: $z-index-fixed;
+    z-index: $z-index-navbar;
   }
 }
 
